<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".Activities.Login.LoginActivity">


    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/font_22sp"
        android:text="@string/tv_title_login"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_title_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/tv_title_username"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_40dp"
        android:layout_marginRight="@dimen/margin_25dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_login"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/et_username_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textStyle="bold"
        android:textSize="@dimen/font_15sp"
        android:textColor="@color/white"
        android:hint="@string/hint_username"
        android:textColorHint="@color/gray_a7a6a6"
        android:background="@drawable/bg_et"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_13dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_title_username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <TextView
        android:id="@+id/tv_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/tv_title_password"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginRight="@dimen/margin_25dp"
        app:layout_constraintTop_toBottomOf="@id/et_username_login"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textStyle="bold"
        android:textSize="@dimen/font_15sp"
        android:textColor="@color/white"
        android:hint="@string/hint_password"
        android:textColorHint="@color/gray_a7a6a6"
        android:background="@drawable/bg_et"
        android:padding="@dimen/padding_10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:text="@string/tv_btn_login"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintTop_toBottomOf="@id/et_password_login"
        app:layout_constraintBottom_toTopOf="@id/tv_title_make_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.35"/>

    <TextView
        android:id="@+id/tv_title_make_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/tv_title_make_acc"
        android:textSize="@dimen/font_18sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toTopOf="@id/tv_title_forget_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>



    <TextView
        android:id="@+id/tv_title_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_a7a6a6"
        android:text="@string/tv_title_forget_password"
        android:textSize="@dimen/font_18sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_make_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>