<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root_internet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_internet_dialog"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/padding_15dp"
    tools:context=".Activities.Dialogs.InternetActivity">

    <ImageView
        android:id="@+id/iv_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_no_internet"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_no_internet"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_no_internet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_description_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_description_no_internet"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_no_internet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <Button
        android:id="@+id/btn_wifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/bg_btn"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/font_13sp"
        android:text="@string/tv_connect_to_wifi"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/tv_description_no_internet"
        app:layout_constraintLeft_toRightOf="@id/btn_mobile_data"
        app:layout_constraintRight_toRightOf="parent"/>



    <Button
        android:id="@+id/btn_mobile_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/bg_btn"
        android:text="@string/tv_connect_to_data_mobile"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/tv_description_no_internet"
        app:layout_constraintRight_toLeftOf="@id/btn_wifi"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>