<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_gravity="center"
    android:background="@color/gray_7d7d7d"
    android:weightSum="4">


    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_white"
            android:layout_marginTop="@dimen/margin_3dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_title_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/font_13sp"
            android:text="@string/tv_title_profile"
            android:padding="@dimen/padding_3dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_shop"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_icon_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shop_white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_3dp"/>

        <TextView
            android:id="@+id/tv_title_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/font_13sp"
            android:text="@string/tv_title_shop"
            android:padding="@dimen/padding_3dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_categories"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_category_white"
            android:layout_marginTop="@dimen/margin_3dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_tile_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/font_13sp"
            android:text="@string/tv_title_category"
            android:padding="@dimen/padding_3dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_white"
            android:layout_marginTop="@dimen/margin_3dp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/tv_title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/font_13sp"
            android:text="@string/tv_title_home"
            android:padding="@dimen/padding_3dp"
            />

    </LinearLayout>


</LinearLayout>