<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".Activities.ForgetPassword.Stp_Three_NewPassword">

    <ImageView
        android:id="@+id/iv_logo_stp_three_new_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_title_change_password_stp_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/tv_title_new_password"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_100dp"
        android:layout_marginRight="@dimen/margin_25dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_stp_three_new_password"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/et_change_password_stp_three_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textStyle="bold"
        android:textSize="@dimen/font_15sp"
        android:textColor="@color/white"
        android:hint="@string/hint_confirm_change_password"
        android:textColorHint="@color/gray_a7a6a6"
        android:background="@drawable/bg_et"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_13dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tv_title_change_password_stp_three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <TextView
        android:id="@+id/tv_title_confirm_change_password_stp_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/tv_title_confirm_password"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginRight="@dimen/margin_25dp"
        app:layout_constraintTop_toBottomOf="@id/et_change_password_stp_three_"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/et_confirm_change_password_stp_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textStyle="bold"
        android:textSize="@dimen/font_15sp"
        android:textColor="@color/white"
        android:hint="@string/hint_confirm_change_password"
        android:textColorHint="@color/gray_a7a6a6"
        android:background="@drawable/bg_et"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_13dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_change_password_stp_three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:text="@string/tv_title_change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_100dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_change_password_stp_three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>